--- a/Src/SequencingFiles/SequencingFiles.csproj
+++ b/Src/SequencingFiles/SequencingFiles.csproj
@@ -51,6 +51,7 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
+    <RegisterForComInterop>false</RegisterForComInterop>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'TeamBuild|x64'">
     <OutputPath>bin\x64\TeamBuild\</OutputPath>
@@ -60,6 +61,9 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="InterOp.IO">
